--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,25 @@
 .App {
-    text-align: center;
-  }
-  body {
-    background: url("./naruto.jpg") no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    margin:0;
-  }
-  
-  
+  text-align: center;
+}
+body {
+  margin:0;
+}
+.element { 
+  display: block;
+  position: absolute;
+ 
+  background-color: black;
+  opacity: 0.5;
+}
+.picture{
+  background: url("./naruto.jpg") ;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  display: block;
+  position: absolute;  height: 83%;
+  margin: 0;
+  width: 100%;
+  height:85%;
+}
