--- a/src/modules/styles/Header.css
+++ b/src/modules/styles/Header.css
@@ -4,7 +4,7 @@ ul {
     justify-content: space-around;
     align-items: center;
 }
-.nameList {
+.foundList {
     display: flex;
     flex-direction: column;
 }
