--- a/src/App.css
+++ b/src/App.css
@@ -9,14 +9,13 @@ body {
   -o-background-size: cover;
   background-size: cover;
 }
-.element { 
-  display: block;
-  position: absolute;
-  background-color: black;
-  opacity: 0.5;
-}
 .picture{
   display: block;
+  background: url("./naruto.jpg")  no-repeat center center fixed; ;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   position: absolute;  height: 83%;
   margin: 0;
   width: 100%;
