--- a/src/modules/styles/NavBar.css
+++ b/src/modules/styles/NavBar.css
@@ -8,7 +8,7 @@ ul {
     display: flex;
     flex-direction: column;
 }
-header {
+nav {
     display: block;
     background-color: grey;
     width: 100%;
