--- a/src/modules/styles/GameOver.css
+++ b/src/modules/styles/GameOver.css
@@ -2,11 +2,15 @@ form{
     display: block;
     position: absolute;
     opacity: 0.95;
-    top: 30%;
+    top: 20%;
     left:35%;
     width:30% ;
-    height: 60%;
+    height: 20%;
     background-color: darkslategray;
     border: 1px solid black;
     box-shadow: 2px 2px;
+}
+
+form input{
+    margin: 15px;
 }
