--- a/src/modules/styles/Scores.css
+++ b/src/modules/styles/Scores.css
@@ -2,10 +2,10 @@
     display: block;
     position: absolute;
     opacity: 0.95;
-    top: 30%;
+    top: 20%;
     left:35%;
     width:30% ;
-    height: 60%;
+    height: 50%;
     background-color: darkslategray;
     border: 1px solid black;
     box-shadow: 2px 2px;
@@ -23,4 +23,5 @@
     width: 100%;
    justify-content:space-around;
     list-style: none;
+    margin: 8px 0;
 }
